Prevent commit button from overflowing
Fixes #99

--- a/styles/commit.less
+++ b/styles/commit.less
@@ -25,6 +25,8 @@
 
   &-button {
     flex: 1;
+    overflow: hidden;
+    text-overflow: ellipsis;
   }
 
   &-countdown {
